# mlisp-rs

./: Cargo.toml  LICENSE.md  README.md
src/: builtin.rs  eval.rs  lenv.rs  lval.rs  main.rs  util.rs
src/builtin/: conditions.rs  env.rs  list.rs  math.rs  mod.rs
src/parser/: GRAMMAR.md  ast.rs  lexer.rs  mod.rs  tokens.rs  util.rs
