[package]

name = "rust-lispy"
version = "0.0.1"
authors = ["Markus Siemens <siemens1993@gmail.com>"]


[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
#debug = true


[dependencies]
log = "^0.1.0"

[dependencies.readline]
git = "https://github.com/msiemens/rust-readline"